# Pretzel

./: '  .clang-format  .gitignore  CMakeLists.txt  pretzel
apid/: CMakeLists.txt  main.cpp
apid/action/: ApidAction.cpp  ApidAction.h  ApidActionFactory.cpp  ApidActionFactory.h
apid/core/: ApidCore.cpp  ApidCore.h
apid/event/: ApidEvent.cpp  ApidEvent.h  ApidEventFactory.cpp  ApidEventFactory.h
apid/http/: ApidHttpHandler.cpp  ApidHttpHandler.h
apid/process/: ApidProcess.cpp  ApidProcess.h
apid/router/: ApidRxRouter.cpp  ApidRxRouter.h  ApidTxRouter.cpp  ApidTxRouter.h
apid/service/: ApidServiceManager.cpp  ApidServiceManager.h
authd/: CMakeLists.txt  main.cpp
authd/action/: AuthdAction.cpp  AuthdAction.h  AuthdActionFactory.cpp  AuthdActionFactory.h
authd/core/: AuthdCore.cpp  AuthdCore.h
authd/event/: AuthdEvent.cpp  AuthdEvent.h  AuthdEventFactory.cpp  AuthdEventFactory.h
authd/io/: HttpsClient.cpp  HttpsClient.h
authd/process/: AuthdProcess.cpp  AuthdProcess.h
authd/router/: AuthdRxRouter.cpp  AuthdRxRouter.h  AuthdTxRouter.cpp  AuthdTxRouter.h
authd/service/: AuthdServiceManager.cpp  AuthdServiceManager.h
engined/: CMakeLists.txt  main.cpp
engined/action/: EnginedAction.cpp  EnginedAction.h  EnginedActionFactory.cpp  EnginedActionFactory.h
engined/core/: CoreEngine.cpp  CoreEngine.h  EnginedCore.cpp  EnginedCore.h
engined/event/: EnginedEvent.cpp  EnginedEvent.h  EnginedEventFactory.cpp  EnginedEventFactory.h
engined/process/: EnginedProcess.cpp  EnginedProcess.h
engined/router/: EnginedRxRouter.cpp  EnginedRxRouter.h  EnginedTxRouter.cpp  EnginedTxRouter.h
engined/service/: EnginedServiceManager.cpp  EnginedServiceManager.h
icmpd/: CMakeLists.txt  main.cpp
icmpd/action/: IcmpdAction.cpp  IcmpdAction.h  IcmpdActionFactory.cpp  IcmpdActionFactory.h
icmpd/core/: IcmpdCore.cpp  IcmpdCore.h
icmpd/event/: IcmpdEvent.cpp  IcmpdEvent.h  IcmpdEventFactory.cpp  IcmpdEventFactory.h
icmpd/icmp/: IcmpCodec.cpp  IcmpCodec.h  IcmpConnection.cpp  IcmpConnection.h  IcmpEngine.cpp  IcmpEngine.h  IcmpEngineHandler.cpp  IcmpEngineHandler.h  IcmpPacket.cpp  IcmpPacket.h  IcmpProtocol.cpp  IcmpProtocol.h
icmpd/process/: IcmpdProcess.cpp  IcmpdProcess.h
icmpd/router/: IcmpdRxRouter.cpp  IcmpdRxRouter.h  IcmpdTxRouter.cpp  IcmpdTxRouter.h
icmpd/service/: IcmpdServiceManager.cpp  IcmpdServiceManager.h
mgmtd/: CMakeLists.txt  main.cpp
mgmtd/action/: MgmtdAction.cpp  MgmtdAction.h  MgmtdActionFactory.cpp  MgmtdActionFactory.h
mgmtd/core/: MgmtdCore.cpp  MgmtdCore.h
mgmtd/event/: MgmtdEvent.cpp  MgmtdEvent.h  MgmtdEventFactory.cpp  MgmtdEventFactory.h
mgmtd/http/: HttpCache.cpp  HttpCache.h  HttpListener.cpp  HttpListener.h  HttpRouter.cpp  HttpRouter.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  HttpsSession.cpp  HttpsSession.h  MgmtdHttpHandler.cpp  MgmtdHttpHandler.h  MgmtdHttpRxRouter.cpp  MgmtdHttpRxRouter.h
mgmtd/process/: MgmtdProcess.cpp  MgmtdProcess.h
mgmtd/router/: MgmtdRxRouter.cpp  MgmtdRxRouter.h  MgmtdTxRouter.cpp  MgmtdTxRouter.h
mgmtd/service/: MgmtdServiceManager.cpp  MgmtdServiceManager.h
mgmtd/www/: dashboard.html  device-detail.html  devices.html  home.html  index.html  laboratory.html  log-viewer.html  metrics.html  rack-management.html  settings.html
scand/: CMakeLists.txt  main.cpp
scand/action/: ScandAction.cpp  ScandAction.h  ScandActionFactory.cpp  ScandActionFactory.h
scand/api/: ApiEngine.cpp  ApiEngine.h  ApiEngineHandler.cpp  ApiEngineHandler.h  ApiPacket.h  ApiTypes.h  HttpsClient.cpp  HttpsClient.h  IVendorApiProvider.h  PaloAltoApiProvider.cpp  PaloAltoApiProvider.h  VendorApiRegistry.cpp  VendorApiRegistry.h
scand/client/: HttpClient.cpp  HttpClientSession.cpp  HttpClientSession.h
scand/core/: ScandCore.cpp  ScandCore.h
scand/event/: ScandEvent.cpp  ScandEvent.h  ScandEventFactory.cpp  ScandEventFactory.h
scand/http/: HttpClient.cpp  HttpClient.h  HttpClientSession.cpp  HttpClientSession.h
scand/lldp/: LldpProtocol.cpp  LldpProtocol.h  LldpTypes.h
scand/process/: ScandProcess.cpp  ScandProcess.h
scand/router/: ScandRxRouter.cpp  ScandRxRouter.h  ScandTxRouter.cpp  ScandTxRouter.h
scand/service/: ScandServiceManager.cpp  ScandServiceManager.h
scand/snmp/: ScandPacket.h  SnmpEngine.cpp  SnmpEngine.h  SnmpEngineHandler.cpp  SnmpEngineHandler.h  SnmpPacket.h  SnmpProtocol.cpp  SnmpProtocol.h  SnmpTypes.h  SnmpWalk.h
shared/: CMakeLists.txt
shared/action/: Action.h  ActionFactory.h
shared/algorithm/: ByteRingBuffer.cpp  ByteRingBuffer.h
shared/config/: ApiRefs.cpp  ApiRefs.h  Config.cpp  Config.h  ConfigTypes.h
shared/core/: Core.cpp  Core.h
shared/data/: oui.tsv
shared/db/: Database.cpp  Database.h  schema.sql
shared/event/: Event.h  EventFactory.h
shared/http/: HttpBeast.h  HttpClient.cpp  HttpClient.h  HttpExchange.h  HttpHandler.cpp  HttpHandler.h  HttpListener.cpp  HttpListener.h  HttpMessage.h  HttpResponder.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  HttpSessionBase.h  HttpsSession.cpp  HttpsSession.h  StaticFileCache.cpp  StaticFileCache.h  UrlEncode.cpp  UrlEncode.h
shared/io/: Epoll.cpp  Epoll.h
shared/ipc/: IpcClient.cpp  IpcClient.h  IpcClientHandler.cpp  IpcClientHandler.h  IpcCodec.cpp  IpcCodec.h  IpcConnection.cpp  IpcConnection.h  IpcHandler.cpp  IpcHandler.h  IpcMessage.cpp  IpcMessage.h  IpcProtocol.cpp  IpcProtocol.h
shared/process/: Process.h
shared/router/: RxRouter.h  TxRouter.h
shared/service/: ServiceManager.h
shared/session/: Session.cpp  Session.h  SessionManager.h
shared/socket/: IcmpSocket.cpp  IcmpSocket.h  UdpSocket.cpp  UdpSocket.h  UnixDomainSocket.cpp  UnixDomainSocket.h
shared/util/: Logger.cpp  Logger.h  PasswordHash.cpp  PasswordHash.h  Secret.cpp  Secret.h  ThreadManager.cpp  ThreadManager.h
snmpd/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_api_refs.cpp  test_collection_sample.cpp  test_ipc_codec.cpp  test_ipc_protocol.cpp  test_password_hash.cpp  test_secret.cpp  test_static_file_cache.cpp  test_url_encode.cpp
topologyd/: CMakeLists.txt  main.cpp
(+411 files in other folders)
